--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
             <li>Lesson 3: <a href="assignments/lesson 3.html">HTML Markup Validation Assignment</a></li>
             <li>Lesson 4: <a href="assignments/week 4/preston-4.html ">Weather Website</a></li>
-            <li>Lesson 4: <a href="Website Planning.pdf">Website Planning Document</a></li>
+            <li>Lesson 4: <a href="assignments/week 4/Website Planning.pdf">Website Planning Document</a></li>
             <li>Lesson 5: <a href="assignments/week 4/preston-5.html">Preston</a></li>
         </ul>
         </main>
