--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <title>CIT 230 Assignment Portal | Melissa N. Fraley | BYU-Idaho</title>
 
             <meta name="description" content="Assignment portal page for Melissa Fraley Student in CIT 230: Web Front-End Development at Brigham Young University-Idaho.">
+            <link rel="stylesheet" href="normalize.css">
             <link rel="stylesheet" href="css/main.css">
         </head>
         <body>
