--- a/assignments/week 5/preston-5.html
+++ b/assignments/week 5/preston-5.html
@@ -16,7 +16,7 @@
             <img src="images\weather.jpg" alt="Opps logo didn't load">
 <br>
 
-            <h2>"We will ensure you aren't caught in the rain!!!!!"</h2>
+            <h2>"We will ensure you aren't caught in the rain!"</h2>
 <br>
                   
       </header>
