--- a/assignments/week 5/preston-5.html
+++ b/assignments/week 5/preston-5.html
@@ -64,11 +64,13 @@
       <p>Your Gem State Weather</p>
        <address>30 N 1st E</address>
        <address>Preston, Id 83263</address>
+
        <div class="social">
-             <img src="images/facebook.jpg" alt="Facebook">
+             <img src="images/facebook.png" alt="Facebook">
              <img src="images/instagram.png" alt="Instagram">
              <img src= "images/twitter.png" alt="Twitter">
        </div>
+       <br>
        <img src="images/map.jpg" alt="Opps no picture">
   
   <p>Copyright © 2019 |  Your Gem State Weather   | Melissa Fraley |Current date</p> 
