--- a/assignments/week 5/preston-5.html
+++ b/assignments/week 5/preston-5.html
@@ -11,7 +11,7 @@
   <body>  
       <header>
        
-            <h1>Your Gem State Weather</h1>
+            <h1>Gem State Weather</h1>
 
             <img src="images\weather.jpg" alt="Opps logo didn't load">
 <br>
@@ -61,9 +61,12 @@
 <br>
  <footer>
 
-      <p>Your Gem State Weather</p>
+      <p>Gem State Weather</p>
        <address>30 N 1st E</address>
        <address>Preston, Id 83263</address>
+       <br>
+       <p>Phone: (800) 932-8437</p>
+       <p>Email: gemstateweather@weather.com</p>
 
        <div class="social">
              <img src="images/facebook.png" alt="Facebook">
