--- a/assignments/week 5/preston-5.html
+++ b/assignments/week 5/preston-5.html
@@ -45,7 +45,8 @@
                   <li>Windspeed:2mph</li>
             </ul></div>
       </section>
-   
+      <br>
+      <section> 
 <br>
     <h1>Current Weather Story</h1>
     <br>
@@ -58,7 +59,7 @@
       School districts canceled classes as far west as Salt Lake City and Flagstaff, Arizona, and as far east as Detroit on Wednesday, a testament to how far-reaching the storm's impacts were. Officials urged drivers to slow down and be extremely careful when traveling on roads slickened by Lucian's snow and ice.
       The storm also hit the Northwest hard Sunday and Monday, leaving unusually large snow accumulations in the Seattle area. Roads were slippery and dangerous, and police reported dozens of spinouts and crashes on Monday.
       </p>
-<br>
+      </section> 
  <footer>
 
       <p>Gem State Weather</p>
