--- a/assignments/week 6/preston-6.html
+++ b/assignments/week 6/preston-6.html
@@ -46,7 +46,9 @@
             </ul></div>
              </div>
       </section>
-      <br>
+      <h1>Five Day Forcast</h1>
+      <div class="fiveday"><img class="forcast" src="images/5day.jpg"alt="opps no photo"/> 
+      </div>
 <article>
     <h1>Current Weather Story</h1>
     <br>
