--- a/assignments/week 6/preston-6.html
+++ b/assignments/week 6/preston-6.html
@@ -46,9 +46,35 @@
             </ul></div>
              </div>
       </section>
-      <h1>Five Day Forcast</h1>
-      <div class="fiveday"><img class="forcast" src="images/5day.jpg"alt="opps no photo"/> 
-      </div>
+      <section class="forecast">
+          <h3>5 Day Forecast</h3>
+          <table>
+              <thead>
+                  <tr>
+                      <th><span id="dayone">Monday></span></th>
+                      <th><span id="daytwo">Tuesday</span></th>
+                      <th><span id="daythree">Wednesday</span></th>
+                      <th><span id="dayfour">Thursday</span></th>
+                      <th><span id="dayfive">Friday</span></th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td><img src="images/sunny.jpeg" id="weather_iconone" alt="Weather"
+                      Icon"><br>High <span id="dayonetemp"></span>14&deg;F</td>
+                      <td><img src="images/sunny.jpeg" id="weather_icontwo" alt="Weather"
+                      Icon"><br>High <span id="daytwotemp"></span>22&deg;F</td>
+                      <td><img src="images/sunny.jpeg" id="weather_iconthree" alt="Weather"
+                      Icon"><br>High <span id="daythreetemp"></span>22&deg;F</td>
+                      <td><img src="images/sunny.jpeg" id="weather_iconfour" alt="Weather"
+                      Icon"><br>High <span id="dayfourtemp"></span>22&deg;F</td>
+                      <td><img src="images/sunny.jpeg" id="weather_iconfive" alt="Weather"
+                      Icon"><br>High <span id="dayfivetemp"></span>22&deg;F</td>
+                  </tr>
+              </tbody>
+          </table>
+      </section>
+      
 <article>
     <h1>Current Weather Story</h1>
     <br>
@@ -63,6 +89,7 @@
 </article>
 </main>
  <footer>
+ <img src="images/map.jpg" alt="Opps no picture">
 <div class="address">
       <p>Gem State Weather</p>
        <address>30 N 1st E</address>
@@ -70,7 +97,7 @@
        <br>
        <p>Phone: (800) 932-8437</p>
        <p>Email: gemstateweather@weather.com</p>
-       <img src="images/map.jpg" alt="Opps no picture">
+      
       </div>
        <div class="social">
              <img src="images/facebook.png" alt="Facebook">
@@ -82,5 +109,7 @@
   
   <p>Copyright © 2019 |  Your Gem State Weather   | Melissa Fraley |Current date</p> 
       </footer>
+<script>
 
+</script>
 </body>
