--- a/assignments/week 6/preston-6.html
+++ b/assignments/week 6/preston-6.html
@@ -89,7 +89,7 @@
 </article>
 </main>
  <footer>
- <img src="images/map.jpg" alt="Opps no picture">
+ <img id="googleMap" src="images/map.jpg" alt="Opps no picture">
 <div class="address">
       <p>Gem State Weather</p>
        <address>30 N 1st E</address>
