--- a/assignments/week 6/preston-6.html
+++ b/assignments/week 6/preston-6.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-  <head lang="en-us">
+<head lang= "en">
+
         <meta charset="utf-8">
         <meta name="description" content="Weather website page for Melissa Fraley Student in CIT 230: Web Front-End Development at Brigham Young University-Idaho.">
         <meta name= "viewport" content= "width=device-width, initial-scale=1">
-        <link ref="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/small-5.css">
         <link rel="stylesheet" href="css/large-5.css">
         <title>Preston | Weather in Idaho-</title>                        
@@ -13,7 +14,7 @@
        
             <h1>Gem State Weather</h1>
 
-            <img src="images\weather.jpg" alt="Opps logo didn't load">
+            <img src="images/weather.JPG" alt="Opps logo didn't load">
 <br>
 
             <h2>"We will help you get ready for your day!"</h2>
@@ -61,15 +62,15 @@
               <tbody>
                   <tr>
                       <td><img src="images/sunny.jpeg" id="weather_iconone" alt="Weather"
-                      Icon"><br>High <span id="dayonetemp"></span>14&deg;F</td>
+                      Icon><br>High <span id="dayonetemp"></span>14&deg;F</td>
                       <td><img src="images/sunny.jpeg" id="weather_icontwo" alt="Weather"
-                      Icon"><br>High <span id="daytwotemp"></span>22&deg;F</td>
+                      Icon><br>High <span id="daytwotemp"></span>22&deg;F</td>
                       <td><img src="images/sunny.jpeg" id="weather_iconthree" alt="Weather"
-                      Icon"><br>High <span id="daythreetemp"></span>22&deg;F</td>
+                      Icon><br>High <span id="daythreetemp"></span>26&deg;F</td>
                       <td><img src="images/sunny.jpeg" id="weather_iconfour" alt="Weather"
-                      Icon"><br>High <span id="dayfourtemp"></span>22&deg;F</td>
+                      Icon><br>High <span id="dayfourtemp"></span>19&deg;F</td>
                       <td><img src="images/sunny.jpeg" id="weather_iconfive" alt="Weather"
-                      Icon"><br>High <span id="dayfivetemp"></span>22&deg;F</td>
+                      Icon><br>High <span id="dayfivetemp"></span>25&deg;F</td>
                   </tr>
               </tbody>
           </table>
@@ -78,7 +79,7 @@
 <article>
     <h1>Current Weather Story</h1>
     <br>
-    <img src="images\snow.jpeg" alt="Opps logo didn't load">
+    <img src="images/snow.jpeg" alt="Opps logo didn't load">
 
     <p>Reported by Weather Channel: After dumping inches – feet, in some areas – of snow in two waves, Winter Storm Lucian finally left the West on Wednesday.
       But it pivoted into the Midwest, where it was doling out a second punch of wintry weather to areas that already saw snow and ice days earlier. The winter storm has been blamed for three deaths – two in Missouri and one in Kansas.
