--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li>Lesson 4: <a href="assignments/week 4/preston-4.html">Weather Website</a></li>
             <li>Lesson 4: <a href="assignments/week 4/Website Planning.pdf">Website Planning Document</a></li>
             <li>Lesson 5: <a href="assignments/week 5/preston-5.html">Preston</a></li>
-            <li>Lesson 6: <a href="assignments/week 6/preston-6.html"></a></li>
+            <li>Lesson 6: <a href="assignments/week 6/preston-6.html">Optamizing</a></li>
             
         </ul>
         </main>
