--- a/assignments/week 6/preston-6.html
+++ b/assignments/week 6/preston-6.html
@@ -50,7 +50,7 @@
           <table>
               <thead>
                   <tr>
-                      <th><span id="dayone">Monday></span></th>
+                      <th><span id="dayone">Monday</span></th>
                       <th><span id="daytwo">Tuesday</span></th>
                       <th><span id="daythree">Wednesday</span></th>
                       <th><span id="dayfour">Thursday</span></th>
