--- a/assignments/week 6/preston-6.html
+++ b/assignments/week 6/preston-6.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/small-5.css">
         <link rel="stylesheet" href="css/large-5.css">
+        <link rel="stylesheet" href="https://cdjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.main.css">
         <title>Preston | Weather in Idaho-</title>                        
   </head>
   <body>  
@@ -31,6 +32,13 @@
             
         </ul>   
       </nav> 
+    <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#preston">Preston</a>
+        <a href="#sodasprings">Soda Springs</a>
+        <a href="#fishhaven">Fish Haven</a>
+        <a href="stormcenter">Storm Center</a>
+        <a href="gallery">Gallery</a>
 <main>
       <section>
             <h1>Preston</h1>
