--- a/assignments/week 6/preston-6.html
+++ b/assignments/week 6/preston-6.html
@@ -21,8 +21,10 @@
         </div>                  
       </header>
 
- <nav class="wrapper">      
-        <ul>
+ <nav>
+     <button onclick="toggleNavMenu()">☰</button>      
+        <ul id="primaryNav" class="hide">
+            
             <li><a href="current">Home</a></li>
             <li><a href="preston/">Preston</a></li>            
             <li><a href="sodasprings/">Soda Springs</a></li>
@@ -32,14 +34,7 @@
             
         </ul>   
       </nav> 
-    <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#preston">Preston</a>
-        <a href="#sodasprings">Soda Springs</a>
-        <a href="#fishhaven">Fish Haven</a>
-        <a href="stormcenter">Storm Center</a>
-        <a href="gallery">Gallery</a>
-<main>
+    <main>
       <section>
             <h1>Preston</h1>
             <div class="summary"><img class="road" src="images/road.jpeg"alt="Opps no photo"/>
