--- a/assignments/week 6/preston-6.html
+++ b/assignments/week 6/preston-6.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/small-5.css">
         <link rel="stylesheet" href="css/large-5.css">
-        <link rel="stylesheet" href="https://cdjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.main.css">
-        <title>Preston | Weather in Idaho-</title>                        
+                <title>Preston | Weather in Idaho-</title>                        
   </head>
   <body>  
       <header>
@@ -24,7 +23,7 @@
  <nav>
      <button onclick="toggleNavMenu()">☰</button>      
         <ul id="primaryNav" class="hide">
-            
+
             <li><a href="current">Home</a></li>
             <li><a href="preston/">Preston</a></li>            
             <li><a href="sodasprings/">Soda Springs</a></li>
@@ -37,7 +36,7 @@
     <main>
       <section>
             <h1>Preston</h1>
-            <div class="summary"><img class="road" src="images/road.jpeg"alt="Opps no photo"/>
+            <div class="summary"><img class="road" src="images/smallview.png"alt="Opps no photo"/>
             <div><h3>Weather Summary</h3>
             <ul class="weather">
                   <li>Current Weather:Sunny</li>
@@ -111,7 +110,5 @@
   
   <p>Copyright © 2019 |  Your Gem State Weather   | Melissa Fraley |Current date</p> 
       </footer>
-<script>
-
-</script>
+<script src="script/hamburger.js"></script> 
 </body>
