--- a/assignments/week 6/preston-6.html
+++ b/assignments/week 6/preston-6.html
@@ -21,16 +21,16 @@
         </div>                  
       </header>
 
- <nav>
+     <nav>
      <button onclick="toggleNavMenu()">☰</button>      
         <ul id="primaryNav" class="hide">
 
-            <li><a href="current">Home</a></li>
-            <li><a href="preston/">Preston</a></li>            
-            <li><a href="sodasprings/">Soda Springs</a></li>
-            <li><a href="fishhaven/">Fish Haven</a></li>
-            <li><a href="stormcenter">Storm Center</a></li>
-            <li><a href="gallery">Gallery</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Preston</a></li>            
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
+            <li><a href="#">Storm Center</a></li>
+            <li><a href="#">Gallery</a></li>
             
         </ul>   
       </nav> 
