--- a/assignments/week 7/preston-7.html
+++ b/assignments/week 7/preston-7.html
@@ -6,8 +6,8 @@
         <meta name="description" content="Weather website page for Melissa Fraley Student in CIT 230: Web Front-End Development at Brigham Young University-Idaho.">
         <meta name= "viewport" content= "width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/small-6.css">
-        <link rel="stylesheet" href="css/large-6.css">
+        <link rel="stylesheet" href="css/small-7.css">
+        <link rel="stylesheet" href="css/large-7.css">
 
                 <title>Preston | Weather in Idaho-</title>                        
   </head>
@@ -36,6 +36,9 @@
     <main>
       <section class="hero">
             <h1>Preston</h1>
+            <img class="myphoto" src="images/franklin.jpg" alt="Sunny Day in Preston Idaho" sizes="50vw" srcset="images/franklin200.jpg 400w,
+            images/franklin800.jpg 900w">
+
             <div class="summary"><img class="road" src="images/smallview.png" alt="Opps no photo"/>
             <div><h3>Weather Summary</h3>
             <ul class="weather">
