--- a/assignments/week 7/preston-7.html
+++ b/assignments/week 7/preston-7.html
@@ -36,8 +36,8 @@
     <main>
       <section class="hero">
             <h1>Preston</h1>
-            <img class="myphoto" src="images/franklinorg.jpg" alt="Sunny Day in Preston Idaho" sizes="50vw" srcset="images/franklin200.jpg 400w,
-            images/franklin800.jpg 900w">
+            <img class="myphoto" src="images/smallview.png" alt="Sunny Day in Preston Idaho" sizes="50vw" srcset="images/franklin200.jpg 400w,
+            images/smallview.png 900w">
 
             <div><h3>Weather Summary</h3>
             <ul class="weather">
