--- a/assignments/week 7/gallary-7.html
+++ b/assignments/week 7/gallary-7.html
@@ -33,6 +33,35 @@
             
         </ul>   
       </nav> 
+      <main>
+          <h2>Image Gallery</h2>
+          <div class="weatherGallery">
+              <figure>
+                  <img src="images/mountains.jpg" alt="Mountains">
+                  <figcaption>Mountains</figcaption>
+              </figure>
+              <figure>
+                <img src="images/ski.jpg" alt="Skiing">
+                <figcaption>Fun of Skiing</figcaption>
+            </figure>
+            <figure>
+                <img src="images/snow.jpeg" alt="Snow">
+                <figcaption>Beautiful Snow</figcaption>
+            </figure>
+            <figure>
+                <img src="images/water.jpg" alt="Water">
+                <figcaption>Beautiful view of water</figcaption>
+            </figure>
+            <figure>
+                <img src="images/fall.jpg" alt="Fall">
+                <figcaption>Fall Colors</figcaption>
+            </figure>
+            <figure>
+                <img src="images/countryroad.jpg" alt="Country">
+                <figcaption>Country Road</figcaption>
+            </figure>
+          </div>
+      </main>
 
 
 
