--- a/assignments/week 7/gallary-7.html
+++ b/assignments/week 7/gallary-7.html
@@ -45,8 +45,8 @@
                 <figcaption>Fun of Skiing</figcaption>
             </figure>
             <figure>
-                <img src="images/snow.jpeg" alt="Snow">
-                <figcaption>Beautiful Snow</figcaption>
+                <img src="images/beautifulview.jpg" alt="Beautiful">
+                <figcaption>Beautiful View</figcaption>
             </figure>
             <figure>
                 <img src="images/water.jpg" alt="Water">
