--- a/assignments/week 7/preston-7.html
+++ b/assignments/week 7/preston-7.html
@@ -7,6 +7,7 @@
         <meta name= "viewport" content= "width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/small-7.css">
+        <link rel="stylesheet" href="css/medium-7.css">
         <link rel="stylesheet" href="css/large-7.css">
 
                 <title>Preston | Weather in Idaho-</title>                        
@@ -25,11 +26,11 @@
         <ul id="primaryNav">
 
             <li><a href="#">Home</a></li>
-            <li><a href="#">Preston</a></li>            
+            <li class="active"><a href="preston-7.html">Preston</a></li>            
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallary-7.html">Gallery</a></li>
             
         </ul>   
       </nav> 
@@ -37,7 +38,7 @@
       <section class="hero">
             <h1>Preston</h1>
             <img class="myphoto" src="images/smallview.png" alt="Sunny Day in Preston Idaho" sizes="50vw" srcset="images/franklin200.jpg 400w,
-            images/smallview.png 900w">
+            images/franklin800.jpg 900w">
 
             <div><h3>Weather Summary</h3>
             <ul class="weather">
@@ -47,8 +48,8 @@
                   <li>Humidity:12%</li>
                   <li>Windspeed:2mph</li>
             </ul></div>
-             </div>
-      </section>
+             
+        </section>
       <section class="forecast">
           <h3>5 Day Forecast</h3>
           <table>
