--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li>Lesson 4: <a href="assignments/week 4/Website Planning.pdf">Website Planning Document</a></li>
             <li>Lesson 5: <a href="assignments/week 5/preston-5.html">Preston</a></li>
             <li>Lesson 6: <a href="assignments/week 6/preston-6.html">Optamizing</a></li>
+            <li>Lesson 7: <a href="assignments/week 7/preston-7.html">Preston 7</a> <a href="assignments/week 7/gallary-7.html">Gallary</a></li>
             
         </ul>
         </main>
