--- a/assignments/week 7/preston-7.html
+++ b/assignments/week 7/preston-7.html
@@ -48,6 +48,7 @@
                   <li>Humidity:12%</li>
                   <li>Windspeed:2mph</li>
             </ul></div>
+            <div id="output"></div>
              
         </section>
       <section class="forecast">
@@ -114,5 +115,6 @@
 </footer>
 <script src="script/hamburger.js"></script> 
 <script src="script/currentdate.js"></script>
+<script src="script/windchill.js"></script>
 </body>
 </html>
