--- a/assignments/week 7/gallary-7.html
+++ b/assignments/week 7/gallary-7.html
@@ -37,7 +37,7 @@
     </nav>
     <main>
         <h2>Image Gallery</h2>
-        <div class="weatherGallery">
+        <div class="grid">
             <figure>
                 <img src="images/mountains.jpg" alt="Mountains">
                 <figcaption>Mountains</figcaption>
