--- a/assignments/week 7/preston-7.html
+++ b/assignments/week 7/preston-7.html
@@ -43,10 +43,10 @@
             <div><h3>Weather Summary</h3>
             <ul class="weather">
                   <li>Current Weather:Sunny</li>
-                  <li>High:80</li>
-                  <li>Wind Chill:0</li>
-                  <li>Humidity:12%</li>
-                  <li>Windspeed:2mph</li>
+                  <li>High: <span id="highTemp">80</span>&deg;</li>
+                  <li>Wind Chill: <span id="windchill">0</span>&deg;</li>
+                  <li>Humidity: <span id="humidity">12%</span>&deg;</li>
+                  <li>Windspeed: <span id="windspeed">2mph</span>&deg;</li>
             </ul></div>
             <div id="output"></div>
              
