--- a/assignments/week 7/gallary-7.html
+++ b/assignments/week 7/gallary-7.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small-7.css">
+    <link rel="stylesheet" href="css/medium-7.css">
     <link rel="stylesheet" href="css/large-7.css">
 
     <title>Preston | Weather in Idaho-</title>
