--- a/assignments/week 7/preston-7.html
+++ b/assignments/week 7/preston-7.html
@@ -44,7 +44,7 @@
             <ul class="weather">
                   <li>Current Weather:Sunny</li>
                   <li>High: <span id="highTemp">80</span>&deg;</li>
-                  <li>Wind Chill: <span id="windchill">F</span>&deg;</li>
+                  <li>Wind Chill: <span id="windchill"></span>&deg;</li>
                   <li>Humidity: <span id="humidity">12%</span>&deg;</li>
                   <li>Windspeed: <span id="windspeed">2mph</span>&deg;</li>
             </ul></div>
