--- a/assignments/week 8/tablebuild.html
+++ b/assignments/week 8/tablebuild.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
-<html lang= "en us">
+<html lang="en us">
 
- <head>
-  <title>ACME Wildwest</title>
- </head>
-<header>
-    <h1>ACME Wildwest</h1>
-</header>
+<head>
+    <title>Lesson 8 Assingment</title>
+    <link href="style.css" rel="stylesheet" types="tablebuild.css">
+</head>
 
- <body>
-<main>
-<table>
-    <tr>
-        <td>Period</td>
-        <td>Sales</td>
-        <td>Sales Goal</td>
-    </tr>
-    <tr>
-        <td>August</td>
-        <td>$3,590</td>
-        <td>$4,000</td>
-    </tr>
-    <tr>
-        <td>September</td>
-        <td>$4,420</td>
-        <td>$5,000</td>
-    </tr>
-    <tr>
-        <td>October</td>
-        <td>$4,870</td>
-        <td>$5,000</td>
-    </tr>
-    <tr>
-        <td>November</td>
-        <td>$8,610</td>
-        <td>$7,500</td>
-    </tr>
-    <tr>
-        <td>Black Friday</td>
-        <td>$3,200</td>
-    </tr>
-    <tr>
-        <td>December</td>
-        <td>$6,820</td>
-        <td>$7,500</td>
-    </tr>
-</table>
-<footer>
-    <p>Compiled 12.20.2020 by bRauls</p>
-</footer>
-</main>  
+<body>
+    <header>
+        <h1>ACME Wildwest</h1>
+    </header>
+    <main>
+        <table>
+            <tr>
+                <td>Period</td>
+                <td>Sales</td>
+                <td>Sales Goal</td>
+            </tr>
+            <tr>
+                <td>August</td>
+                <td>$3,590</td>
+                <td>$4,000</td>
+            </tr>
+            <tr>
+                <td>September</td>
+                <td>$4,420</td>
+                <td>$5,000</td>
+            </tr>
+            <tr>
+                <td>October</td>
+                <td>$4,870</td>
+                <td>$5,000</td>
+            </tr>
+            <tr>
+                <td>November</td>
+                <td>$8,610</td>
+                <td>$7,500</td>
+            </tr>
+            <tr>
+                <td>Black Friday</td>
+                <td>&nbsp;</td>
+                <td>$3,200</td>
+            </tr>
+            <tr>
+                <td>December</td>
+                <td>$6,820</td>
+                <td>$7,500</td>
+            </tr>
+        </table>
+        <footer>
+            <p>Compiled 12.20.2020 by bRauls</p>
+        </footer>
+    </main>
+
 </html>
