--- a/assignments/week 7/gallary-7.html
+++ b/assignments/week 7/gallary-7.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/medium-7.css">
     <link rel="stylesheet" href="css/large-7.css">
 
-    <title>Preston | Weather in Idaho-</title>
+    <title>Gallery | Weather in Idaho-</title>
 </head>
 
 <body>
