--- a/assignments/week 8/tablebuild.html
+++ b/assignments/week 8/tablebuild.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en us">
+<html>
 
 <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="tablebuild.css">
     <title>Lesson 8 Assingment</title>
-    <link href="style.css" rel="stylesheet" types="tablebuild.css">
+   
 </head>
 
 <body>
