--- a/assignments/week 8/tablebuild.html
+++ b/assignments/week 8/tablebuild.html
@@ -3,7 +3,7 @@
 
 <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="tablebuild.css">
+        <link rel="stylesheet" href="css/tablebuild.css">
     <title>Lesson 8 Assingment</title>
    
 </head>
