--- a/assignments/week 8/stormcenter.html
+++ b/assignments/week 8/stormcenter.html
@@ -78,11 +78,13 @@
         <input type="radio" name="dangerlevel" value="yes" checked>Yes</br>
         <input type="radio" name="dangerlevel" value="no" checked>No</br>
         <input type="radio" name="dangerlevel" value="maybe" checked>Maybe</br>
-        <Form>
+        <form>
             <h3>Additional Information</h3>
             Comments: <br>
             <textarea rows="4" cols="50"></textarea> <br>
-            <input type="submit" value="Submit">
+         </form>  
+         <form method="get" action="thanks.html"> 
+            <button type="submit">Submit</button> 
         </form>
 
     <footer>
