--- a/assignments/week 8/gallary-7.html
+++ b/assignments/week 8/gallary-7.html
@@ -7,9 +7,10 @@
     <meta name="description" content="Weather website page for Melissa Fraley Student in CIT 230: Web Front-End Development at Brigham Young University-Idaho.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/small-7.css">
-    <link rel="stylesheet" href="css/medium-7.css">
-    <link rel="stylesheet" href="css/large-7.css">
+    <link rel="stylesheet" href="css/small-8.css">
+    <link rel="stylesheet" href="css/medium-8.css">
+    <link rel="stylesheet" href="css/large-8.css">
+    <link rel="stylesheet" href="css/stormcenter-8.css">
 
     <title>Gallery | Weather in Idaho-</title>
 </head>
@@ -31,7 +32,7 @@
             <li><a href="preston-7.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
             <li class="active"><a href="gallary-7.html">Gallery</a></li>
 
         </ul>
