--- a/assignments/week 8/preston-7.html
+++ b/assignments/week 8/preston-7.html
@@ -6,9 +6,10 @@
         <meta name="description" content="Weather website page for Melissa Fraley Student in CIT 230: Web Front-End Development at Brigham Young University-Idaho.">
         <meta name= "viewport" content= "width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/small-7.css">
-        <link rel="stylesheet" href="css/medium-7.css">
-        <link rel="stylesheet" href="css/large-7.css">
+        <link rel="stylesheet" href="css/small-8.css">
+        <link rel="stylesheet" href="css/medium-8.css">
+        <link rel="stylesheet" href="css/large-8.css">
+        <link rel="stylesheet" href="css/stormcenter-8.css">
 
                 <title>Preston | Weather in Idaho-</title>                        
   </head>
