--- a/assignments/week 8/thanks.html
+++ b/assignments/week 8/thanks.html
@@ -37,13 +37,11 @@
 
         </ul>
     </nav>
-
-    <div>
-        <p>Thank you for your submittion</p>
-    </div>
-
-
-
+    <main>
+        <div>
+            <p>Thank you for your submission</p>
+        </div>
+    </main>
 
     <footer>
         <img id="googleMap" src="images/map.jpg" alt="Opps no picture">
