--- a/assignments/week 8/preston-7.html
+++ b/assignments/week 8/preston-7.html
@@ -30,7 +30,7 @@
             <li class="active"><a href="preston-7.html">Preston</a></li>            
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallary-7.html">Gallery</a></li>
             
         </ul>   
