--- a/assignments/week 8/thanks.html
+++ b/assignments/week 8/thanks.html
@@ -39,7 +39,7 @@
     </nav>
     <main>
         <div>
-            <p>Thank you for your submission</p>
+            <p>Thank you for your submission!</p>
         </div>
     </main>
 
