--- a/assignments/week 8/tablebuild.html
+++ b/assignments/week 8/tablebuild.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
 <head>
         <meta charset="utf-8">
@@ -50,7 +50,7 @@
         </tbody>    
         <tfoot>
             <tr>
-            <td colspan="3">Compiled 12.20.2020 by bRauls</p>
+            <td colspan="3">Compiled 12.20.2020 by bRauls</td>
             </tr>
         </tfoot>
     </table>
