--- a/assignments/week 8/thanks.html
+++ b/assignments/week 8/thanks.html
@@ -32,7 +32,7 @@
             <li class="#"><a href="preston-7.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="active"><a href="stormcenter.html">Storm Center</a></li>
+            <li class="active"><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallary-7.html">Gallery</a></li>
 
         </ul>
