--- a/assignments/week 8/stormcenter.html
+++ b/assignments/week 8/stormcenter.html
@@ -29,7 +29,7 @@
         <ul id="primaryNav">
 
             <li><a href="#">Home</a></li>
-            <li><a href="#"><a href="preston-7.html">Preston</a></li>
+            <li><a href="preston-7.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li class="active"><a href="stormcenter.html">Storm Center</a></li>
