--- a/assignments/week 8/stormcenter.html
+++ b/assignments/week 8/stormcenter.html
@@ -45,7 +45,7 @@
         E-mail: <br>
         <input type="email" name="mail" placeholder="weather@mail.com"><br>
         Phone Number: <br>
-        <input type="tel" name="phonenumber" pattern="d{3}[\-]\d{3}[\-]\d{4}"required><br>
+        <input type="tel" name="phonenumber" pattern="d{3}[\-]\d{3}[\-]\d{4}" required><br>
         Zip code: <br>
         <input type="number" name="zipcode" required><br>
     </fieldset>
@@ -77,10 +77,10 @@
             <option value="sodasprings">Soda Springs</option>
             <option value="fishhaven">Fish Haven</option>
         </select><br>
-        Are you in danger?: <br>
-        <input type="radio" name="dangerlevel" value="yes" checked>Yes</br>
-        <input type="radio" name="dangerlevel" value="no" checked>No</br>
-        <input type="radio" name="dangerlevel" value="maybe" checked>Maybe</br>
+        Are you in danger? <br>
+        <input type="radio" name="dangerlevel" value="yes" checked>Yes<br>
+        <input type="radio" name="dangerlevel" value="no" checked>No<br>
+        <input type="radio" name="dangerlevel" value="maybe" checked>Maybe<br>
     </fieldset>
         <fieldset>
             <h3>Additional Information</h3>
