--- a/assignments/week 8/preston-7.html
+++ b/assignments/week 8/preston-7.html
@@ -26,7 +26,7 @@
      <button onclick="toggleNavMenu()">☰</button>      
         <ul id="primaryNav">
 
-            <li><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li class="active"><a href="preston-7.html">Preston</a></li>            
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
