--- a/assignments/week 8/stormcenter.html
+++ b/assignments/week 8/stormcenter.html
@@ -28,7 +28,7 @@
         <button onclick="toggleNavMenu()">☰</button>
         <ul id="primaryNav">
 
-            <li><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="preston-7.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
