--- a/assignments/week 9/home.html
+++ b/assignments/week 9/home.html
@@ -28,11 +28,11 @@
         <button onclick="toggleNavMenu()">☰</button>
         <ul id="primaryNav">
 
-            <li class="active"></li><a href="home.html">Home</a></li>
+            <li class="active"><a href="home.html">Home</a></li>
             <li><a href="preston-7.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li></li><a href="stormcenter.html">Storm Center</a></li>
+            <li>><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallary-7.html">Gallery</a></li>
 
         </ul>
