--- a/assignments/week 9/thanks.html
+++ b/assignments/week 9/thanks.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/large-8.css">
     <link rel="stylesheet" href="css/stormcenter-8.css">
 
-    <title> Home | Weather in Idaho-</title>
+    <title>Storm Center | Weather in Idaho-</title>
 </head>
 
 <body>
@@ -28,29 +28,20 @@
         <button onclick="toggleNavMenu()">☰</button>
         <ul id="primaryNav">
 
-            <li class="active"><a href="home.html">Home</a></li>
-            <li><a href="preston-7.html">Preston</a></li>
+            <li><a href="#">Home</a></li>
+            <li class="#"><a href="preston-7.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="stormcenter.html">Storm Center</a></li>
+            <li class="active"><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallary-7.html">Gallery</a></li>
 
         </ul>
     </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <main>
+        <div>
+            <p>Thank you for your submission!</p>
+        </div>
+    </main>
 
     <footer>
         <img id="googleMap" src="images/map.jpg" alt="Opps no picture">
@@ -76,6 +67,6 @@
     <script src="script/hamburger.js"></script>
     <script src="script/currentdate.js"></script>
     <script src="script/windchill.js"></script>
-    <script src="script/stormcenter.js"></script>
 </body>
+
 </html>
